--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "image-service",
     "version": "0.0.1",
     "scripts": {
+        "pretest": "eslint --ignore-path .gitignore .",
         "test": "mocha"
     },
     "dependencies": {
@@ -9,6 +10,7 @@
     },
     "devDependencies": {
         "chai": "4.2.0",
+        "eslint": "5.16.0",
         "mocha": "6.1.4"
     }
 }
