--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "test": "mocha"
     },
     "dependencies": {
-        "sharp": "0.22.1"
+        "sharp": "0.22.1",
+        "uuidv4": "^4.0.0"
     },
     "devDependencies": {
         "chai": "4.2.0",
