--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "dependencies": {
         "sharp": "0.22.1",
-        "uuidv4": "^4.0.0"
+        "uuidv4": "4.0.0"
     },
     "devDependencies": {
         "chai": "4.2.0",
